add method for send email
